--- a/compose.yaml
+++ b/compose.yaml
@@ -26,7 +26,7 @@ services:
 
   # Django Backend
   backend:
-    image: 248631993760.dkr.ecr.us-east-1.amazonaws.com/coursehub-backend:feature-get-ready-to-deploy
+    image: 248631993760.dkr.ecr.us-east-1.amazonaws.com/coursehub-backend:dev
     container_name: backend
     ports:
       - "8000:8000"
@@ -52,7 +52,7 @@ services:
 
   # Next.js Frontend
   frontend:
-    image: 248631993760.dkr.ecr.us-east-1.amazonaws.com/coursehub-frontend:feature-get-ready-to-deploy
+    image: 248631993760.dkr.ecr.us-east-1.amazonaws.com/coursehub-frontend:dev
     container_name: frontend
     command: ["npm", "run", "start:prod"]
     ports:
