--- a/compose.yaml
+++ b/compose.yaml
@@ -30,6 +30,8 @@ services:
     container_name: backend
     ports:
       - "8000:8000"
+    env_file:
+      - /root/.env
     volumes:
       - /mnt/elastic_file_system/media:/coursehub_container/media
       - /mnt/elastic_file_system/static:/coursehub_container/static
